<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#34445e"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Activities.UserLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#34445e"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/app_icon"
            android:transitionName="app_image" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"

            android:text="Welcome to FixIt"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:transitionName="app_text" />

        <TextView
            android:id="@+id/login_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login to continue"
            android:textColor="#99537983"
            android:textSize="18sp"
            android:transitionName="desc_tran"
            app:fontFamily="@font/nunito_bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:hint="Email"
                android:textColorHint="@color/white"
                android:transitionName="email_tran"
                app:errorIconTint="@color/colorAccent"
                app:errorTextColor="@color/colorAccent"
                app:boxStrokeColor="@color/white"
                app:boxStrokeErrorColor="@color/colorAccent"
                app:hintTextColor="@color/white"
                app:startIconDrawable="@drawable/ic_user"
                app:startIconTint="@color/white">

                <EditText
                    android:id="@+id/email_et"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:hint="Password"
                app:boxStrokeErrorColor="@color/colorAccent"
                app:errorIconTint="@color/colorAccent"
                app:errorTextColor="@color/colorAccent"
                android:textColorHint="@color/white"
                android:transitionName="password_tran"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/white">

                <EditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/nunito_bold"
            android:text="Login"
            android:textColor="@color/white"
            android:transitionName="btn_tran" />

        <Button
            android:id="@+id/login_forgot_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:fontFamily="@font/nunito_bold"
            android:text="Forgot Password?"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/login_reg_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00000000"
            android:fontFamily="@font/nunito_bold"
            android:text="No Account? Register"
            android:textColor="@color/white"
            android:transitionName="account_tran" />

    </LinearLayout>


</ScrollView>