...
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/created_by_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="Alex Eyre"
                android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>

...
