...
                    android:layout_weight="0.85"
                    android:text="Physical issues: "
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <CheckBox
                    android:id="@+id/physical_issue_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:layout_weight="1" />

            </LinearLayout>
...
                    android:layout_weight="0.85"
                    android:text="Electrical issues: "
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <CheckBox
                    android:id="@+id/electrical_issue_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:layout_weight="1" />

            </LinearLayout>
...
                    android:layout_marginTop="60dp"
                    android:text="Add Signature"
                    android:textColor="@color/colorAccent"
                    android:textSize="17sp" />

                <ImageView
                    android:id="@+id/add_signature_btn"
                    android:layout_width="185dp"
                    android:layout_height="200dp"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:layout_marginRight="@dimen/spacing_xlarge"
                    android:layout_toRightOf="@+id/add_signature_tv"
...
                    android:layout_marginTop="60dp"
                    android:text="Add Photo"
                    android:textColor="@color/colorAccent"
                    android:textSize="17sp" />

                <ImageView
                    android:id="@+id/imageBtn"
                    android:layout_width="185dp"
                    android:layout_height="200dp"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:layout_marginRight="@dimen/spacing_xlarge"
                    android:layout_toRightOf="@+id/add_photo_tv"
...
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:layout_marginBottom="@dimen/spacing_middle"
                    android:onClick="btnSubmit"
                    android:text="Submit Report"
                    android:textSize="17sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
...
