...
            android:fontFamily="@font/nunito_bold"
            android:onClick="map_view_btn"
            android:text="Map View"
            android:textSize="17sp" />

        <SearchView
            android:id="@+id/search_field_locations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/map_view_button"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
...
            android:textAlignment="textStart">
        </SearchView>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/job_inspections_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_btn"
        android:layout_marginTop="@dimen/spacing_xmedium"
        android:scrollbars="vertical"
        tools:listitem="@layout/locations_list_item">
...
