...
                android:layout_height="wrap_content"
                android:hint="Last Assigned Employee"
                android:textColorHint="@color/colorAccent"/>


            <Button
                android:id="@+id/create_report_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xxxxlarge"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:fontFamily="@font/nunito_bold"
                android:text="Create Report"
                android:onClick="create_report"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/prev_reports_btn"
...
